images and font update

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
     <div class = "Header"> Screenshots </div>
     <div class = "Description"> Images of the example game and level editor. </div>
     <div class = "ImageContainer"> 
-      <img src = "https://media.gcflearnfree.org/ctassets/topics/246/share_flower_fullsize.jpg" 
-           class = "Image">
-    <img src = "https://media.gcflearnfree.org/ctassets/topics/246/share_flower_fullsize.jpg" 
-           class = "Image">
-    <img src = "https://media.gcflearnfree.org/ctassets/topics/246/share_flower_fullsize.jpg" 
-           class = "Image">
+      <img src = "images/game1.JPG" class = "Image">
+        <img src = "images/leveleditor2.JPG" class = "Image">
+        <img src = "images/game2.JPG" class = "Image">
+        <img src = "images/leveleditor3.JPG" class = "Image">
     </div>
 
     <div class = "Header"> Engine Documentation </div>
