--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
       <div class = "TopHeader"> 
-      <img src = "https://media.gcflearnfree.org/ctassets/topics/246/share_flower_fullsize.jpg" 
+      <img src = "images/engines_enemy.bmp" 
            width = "50" height = "50">
       TinyShooter Engine 
       <div class = "SubHeader"> By Luca Sandoval </div>
@@ -17,7 +17,7 @@
 
     <div class = "Header"> Demonstration </div>
     <div class = "Description"> Video demonstration of Engine and example game / editor. </div>
-    <iframe class = "Content" width="560" height="315" src="https://www.youtube.com/embed/nbd_ntqSjHU?si=N8XFYQTsFAbACkVu" frameborder="0" allowfullscreen></iframe>
+    <iframe class = "Content" width="560" height="500" src="https://www.youtube.com/embed/nbd_ntqSjHU?si=N8XFYQTsFAbACkVu" frameborder="0" allowfullscreen></iframe>
 
     <div class = "Header"> Screenshots </div>
     <div class = "Description"> Images of the example game and level editor. </div>
