--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class = "Header"> Engine Architecture </div>
     <div class = "Description"> The folling diagram is a general overview of TinyShooter Engines's architecture: </div>
     <div class = "ImageContainer"> 
-      <img src = "https://media.gcflearnfree.org/ctassets/topics/246/share_flower_fullsize.jpg" 
-           class = "Image">
+      <img src = "images/diagram.JPG" 
+           class = "Content">
     </div>
 
     <div class = "Header"> Downloads </div>
