update downloads section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
     </div>
 
     <div class = "Header"> Downloads </div>
-    <div class = "Description"> GAME DOWNLOAD LINK OR WHATEVER </div>
+    <div class = "Description"> The following link will allow you to download the engine source code, demo game, and level editor:</div>
+    <div class = "Description"> 
+      <a href = "builds/TinyShooter_Enginev1.0.zip" download> ENGINE DOWNLOAD </a>
+    </div>
+    <div class = "Description"> The engine module is provided (tinyshooterengine.pyd), but if you would like to rebuild it from scratch, you can use the (Windows) build script with the following command: 'sh mingw64build.sh'</div>
+    <div class = "Description"> TinyShooter Engine runs on SDL3. You will likely need to modify the build script and change where it looks for the SDL libraries
+    and headers if you would like to do this.</div>
+    <div class = "Description"> To run the game, use the following command: 'python3 game.py ./Assets/scenes/scene_you_want_to_run.txt'</div>
+    <div class = "Description"> To run the editor, use the following command: 'python3 leveleditor.py'</div>
 
     <div class = "Header"> Post Mortem </div>
     <div class = "Description"> "In the bustling city streets, amidst the cacophony of honking cars and bustling pedestrians, a sense of anticipation hung thick in the air. It was a day unlike any other, where the ordinary seemed to shimmer with a hint of the extraordinary. People hurried along the sidewalks, their faces adorned with expressions ranging from excitement to determination. Each step taken was a testament to their dreams, their aspirations, woven intricately into the fabric of the urban landscape. As the sun dipped below the horizon, casting hues of orange and pink across the skyline, the city came alive in a symphony of lights. From towering skyscrapers to quaint cafes tucked away in hidden alleyways, every corner held a story waiting to be discovered. And amidst it all, amidst the chaos and the beauty, life pulsed relentlessly, a vibrant heartbeat echoing through the streets of possibility.". </div>
