--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class = "Header"> Demonstration </div>
     <div class = "Description"> Video demonstration of Engine and example game / editor. </div>
-    <iframe class = "Content" width="560" height="500" src="https://www.youtube.com/embed/nbd_ntqSjHU?si=N8XFYQTsFAbACkVu" frameborder="0" allowfullscreen></iframe>
+    <iframe class = "Content" width="560" height="500" src="https://www.youtube.com/embed/VlLE8Uw477w?si=yQglFXMII5JX5U-X" frameborder="0" allowfullscreen></iframe>
 
     <div class = "Header"> Screenshots </div>
     <div class = "Description"> Images of the example game and level editor. </div>
